[gd_scene load_steps=17 format=3 uid="uid://b64tc37q3gcnw"]

[ext_resource type="Script" uid="uid://xq6maw2qhs0d" path="res://animals/src/character.gd" id="1_mh6dr"]
[ext_resource type="Script" uid="uid://depx5bfveeqe7" path="res://animals/src/base_ai_controller.gd" id="2_na5lv"]
[ext_resource type="Texture2D" uid="uid://yif6hg23td7i" path="res://assets/jump-cloud.png" id="3_3eklg"]
[ext_resource type="Script" uid="uid://btqojlh0sgxvh" path="res://addons/xsm/state.gd" id="3_8rvar"]
[ext_resource type="Script" uid="uid://mbamp1n27i6" path="res://animals/src/root.gd" id="3_k8jga"]
[ext_resource type="Texture2D" uid="uid://dx05lc3r85t5r" path="res://assets/run-cloud.png" id="4_n1kpo"]
[ext_resource type="Script" uid="uid://b5qyho11052ne" path="res://animals/src/actionable.gd" id="4_qph6h"]
[ext_resource type="Script" uid="uid://dvb38u333k7lj" path="res://animals/src/grounded.gd" id="5_fpodf"]
[ext_resource type="Script" uid="uid://dt083n40aoue1" path="res://animals/src/airborne.gd" id="6_1lpl5"]
[ext_resource type="Script" uid="uid://bve88tco3qfs1" path="res://animals/src/rising.gd" id="7_5fsew"]
[ext_resource type="Script" uid="uid://d1y3ejg5tgj1f" path="res://animals/src/falling.gd" id="7_tf2l3"]
[ext_resource type="Script" uid="uid://bmqoaw0gnpbvb" path="res://animals/src/idle.gd" id="8_ccnsd"]
[ext_resource type="Script" uid="uid://3iyd47r8yh05" path="res://animals/src/walking.gd" id="9_6ptc7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mh6dr"]

[sub_resource type="Gradient" id="Gradient_3eklg"]
offsets = PackedFloat32Array(0.169014, 1)
colors = PackedColorArray(1, 1, 1, 0.584314, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_n1kpo"]
colors = PackedColorArray(1, 1, 1, 0.607843, 1, 1, 1, 0)

[node name="Character" type="CharacterBody2D"]
collision_mask = 10
script = ExtResource("1_mh6dr")

[node name="SpineSprite" type="SpineSprite" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_mh6dr")
debug_color = Color(0, 0.649872, 0.123991, 0.42)

[node name="InteractableRange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionBox" type="CollisionShape2D" parent="InteractableRange"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_mh6dr")
debug_color = Color(0.56, 0.55328, 0.1568, 0.270588)

[node name="BaseAIController" type="Node2D" parent="."]
script = ExtResource("2_na5lv")

[node name="CliffPityBottomRay" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)
collision_mask = 2

[node name="CliffPityTopRay" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(20, 0)
collision_mask = 2

[node name="CoyoteTime" type="Timer" parent="."]

[node name="JumpParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
texture = ExtResource("3_3eklg")
lifetime = 0.3
one_shot = true
direction = Vector2(0, 1)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
damping_min = 50.0
damping_max = 50.0
scale_amount_min = 0.1
scale_amount_max = 0.1
color_ramp = SubResource("Gradient_3eklg")

[node name="WalkParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
texture = ExtResource("4_n1kpo")
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 20)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
angle_max = 360.0
scale_amount_min = 0.15
scale_amount_max = 0.25
color_ramp = SubResource("Gradient_n1kpo")

[node name="DebugState" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -36.0
offset_right = 70.0
offset_bottom = -13.0
text = "DebugState"

[node name="Root" type="Node" parent="."]
script = ExtResource("3_k8jga")
history_size = 5
disabled = false
debug_mode = true
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="PreInit" type="Node" parent="Root"]
script = ExtResource("3_8rvar")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Active" type="Node" parent="Root"]
script = ExtResource("3_8rvar")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../PreInit")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Actionable" type="Node" parent="Root/Active"]
script = ExtResource("4_qph6h")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Grounded" type="Node" parent="Root/Active/Actionable"]
script = ExtResource("5_fpodf")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Idle" type="Node" parent="Root/Active/Actionable/Grounded"]
script = ExtResource("8_ccnsd")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Walking" type="Node" parent="Root/Active/Actionable/Grounded"]
script = ExtResource("9_6ptc7")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Airborne" type="Node" parent="Root/Active/Actionable"]
script = ExtResource("6_1lpl5")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Falling" type="Node" parent="Root/Active/Actionable/Airborne"]
script = ExtResource("7_tf2l3")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Rising" type="Node" parent="Root/Active/Actionable/Airborne"]
script = ExtResource("7_5fsew")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Acting" type="Node" parent="Root/Active"]
script = ExtResource("3_8rvar")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="Grabbed" type="Node" parent="Root/Active/Acting"]
script = ExtResource("3_8rvar")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://btqojlh0sgxvh"

[node name="WalkAudio" type="AudioStreamPlayer2D" parent="."]

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="CoyoteTime" to="Root/Active/Actionable/Airborne/Falling" method="_on_coyote_time_timeout"]
